--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
     <meta name="theme-color" content="#000000" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -20,6 +21,7 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         overscroll-behavior: none;
+        touch-action: pan-y;
       }
       #root {
         width: 100%;
@@ -28,6 +30,14 @@
       }
       * {
         -webkit-tap-highlight-color: transparent;
+        box-sizing: border-box;
+      }
+      /* Optimize scroll performance */
+      @media (hover: none) and (pointer: coarse) {
+        * {
+          scroll-behavior: smooth !important;
+          -webkit-overflow-scrolling: touch !important;
+        }
       }
     </style>
   </head>
